[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "css_make"
version = "1.2.0"
description = "A Python package of the successor to `bp_osd`. Belief propagation with ordered statistics post-processing for decoding quantum LDPC codes."
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "MIT" }
authors = [
    { name = "Rambler Stone", email = "keytophy@gmail.com" },
    { name = "Brait", email = "brait.w216@gmail.com" }
]
maintainers = [
    { name = "Brait", email = "brait.w216@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.26.0",
    "scipy~=1.14.1",
    "ldpc~=2.1.2",
]

[tool.setuptools]
packages = ["css_make"]

[tool.setuptools.package-data]
css_make = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/yysf-brait/css_make"
Documentation = "https://github.com/yysf-brait/css_make#readme"